rehost asteroids elsewhere

--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <html>
   <head>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <script type='application/javascript' src='./keymaster.js'></script>
+    <script type='application/javascript' src='./util.js'></script>
     <script type='application/javascript' src='./moving_object.js'></script>
     <script type='application/javascript' src='./asteroid.js'></script>
     <script type='application/javascript' src='./game.js'></script>
     <script type='application/javascript' src='./ship.js'></script>
+    <script type='application/javascript' src='./bullet.js'></script>
+    
   </head>
   <body>
+    <h1>Erik's Asteroids with Javascript</h1>
     <canvas id='myCanvas' width='500' height='500'>
     
     <script>
